# meadow

./: README.md  environment.yml  mkdocs.yml  plan.md  pyproject.toml  requirements.txt
docs/: README.md  climate.md  data.md  graph.md  index.md  io.md  model.md  overview.md  presentation.md  raster.md  train.md  viz.md
docs/.ipynb_checkpoints/: climate-checkpoint.md  data-checkpoint.md  io-checkpoint.md  viz-checkpoint.md
examples/: minimal_prototype.py
notebooks/: Community-Meadow.ipynb  example_geotiff_pseudosites.ipynb  meems-Dev.ipynb  pedic_example.ipynb
notebooks/.ipynb_checkpoints/: example_geotiff_pseudosites-checkpoint.ipynb
src/multispecies_resistance/: __init__.py  climate.py  cv.py  data.py  graph.py  io.py  model.py  raster.py  train.py  utils.py  vcf_to_hdf5.py  viz.py
src/multispecies_resistance.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_climate.py
